add change in css to include jumbotron and some minor styling changes.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,39 @@
-
 <!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href="css/styles.css" type="text/css">
+    <script src="js/jquery-3.2.1.js"></script>
+    <script src="js/scripts.js"></script>
+    <title>Ping Pong</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="jumbotron">
+      <form id="formOne">
+        <div class="form-group">
+          <h1>Ping Pong</h1>
+          </div>
+        </div>
+        <label for="phrase">Enter a number:</label>
+        <input type="text" id="phrase"><br>
+        <button type="submit" name="button">Submit</button>
+      <div id="result">
+      </form>
+      </div>
+
+
+  </body>
+</html>
+
+
+
+
+
+
+
+
+<!-- <!DOCTYPE html>
 <html>
   <head>
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
@@ -14,11 +48,11 @@
 
 
       <form id="formOne">
-        
+
         <h1>Ping Pong!</h1>
         <div class="form-group">
-          <label for="phrase">Enter a number:</label>
-          <input type="text" id="phrase"><br>
+          <label for="">Enter a number:</label>
+          <input type="text" id="myNumber"><br>
         </div>
         <button type="submit" name="button">Submit</button>
       </form>
@@ -27,4 +61,4 @@
       </div>
     </div>
   </body>
-</html>
+</html> -->
