add background color.

--- a/index.html
+++ b/index.html
@@ -13,15 +13,20 @@
       <form id="formOne">
         <div class="form-group">
           <h1>Ping Pong</h1>
+          <p>
+            Enter a number and see if you can get "Ping Pong!"<br>
+            Hint: any number divided by 3 or 5 or 15 will help.
+          </p>
           </div>
         </div>
-        <label for="phrase">Enter a number:</label>
-        <input type="text" id="phrase"><br>
-        <button type="submit" name="button">Submit</button>
+        <div class="action">
+        <label class="phrase" for="phrase">Enter a number:</label><br><br>
+        <input type="text" id="phrase"><br><br><br>
+        <button type="submit" name="button">Submit</button><br><br>
       <div id="result">
       </form>
       </div>
-
+    </div>
 
   </body>
 </html>
