add background color, margin to jumbotron.

--- a/index.html
+++ b/index.html
@@ -18,16 +18,17 @@
             Hint: any number divided by 3 or 5 or 15 will help.
           </p>
           </div>
-        </div>
+
         <div class="action">
         <label class="phrase" for="phrase">Enter a number:</label><br><br>
         <input type="text" id="phrase"><br><br><br>
-        <button type="submit" name="button">Submit</button><br><br>
+        <button type="submit" name="button"><strong>Submit</button></strong><br><br>
       <div id="result">
-      </form>
+
       </div>
     </div>
-
+  </div>
+  </form>
   </body>
 </html>
 
