add working function that tells the user they must add a number only. All letters and symbols are rejected.

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
           </div>
 
         <div class="action">
-        <label class="phrase" for="phrase">Enter a number:</label><br><br>
-        <input type="text" id="phrase"><br><br><br>
+        <label class="enterNumber" for="enterAnumber">Enter a number:</label><br><br>
+        <input type="number" id="input"><br><br><br>
         <button type="submit" name="button"><strong>Submit</button></strong><br><br>
       <div id="result">
 
