add jquery rewrite

--- a/index.html
+++ b/index.html
@@ -13,24 +13,35 @@
       <form id="formOne">
         <div class="form-group">
           <h1>Ping Pong</h1>
-          <p>
-            Enter a number and see if you can get "Ping Pong!"<br>
-            Hint: any number divided by 3 or 5 or 15 will help.
-          </p>
+          <p>Enter a number and see if you can get "Ping Pong!"<br>
+          Hint: any number divided by 3 or 5 or 15 will help.</p>
+        </div>
+        <form id="formTwo">
+          <div class="form group">
+            <label for="userInput">Enter Your Number Here:</label>
+            <input id="userInput" type="text">
           </div>
+          <div>
+            <button type="submit" class="btn">Play along with Ping-Pong!</button>
+            <ul id="result">
+            </ul>
+          </div>
+        </form>
+      </body>
+    </form>
+</html>
 
-        <div class="action">
+        <!-- <div class="action">
         <label class="enterNumber" for="enterAnumber">Enter a number:</label><br><br>
         <input type="number" id="input"><br><br><br>
-        <button type="submit" name="button"><strong>Submit</button></strong><br><br>
-      <div id="result">
+
+        <button type="submit" class="btn">Find out!</button>
+        <div id="result">
 
       </div>
     </div>
-  </div>
-  </form>
-  </body>
-</html>
+  </div> -->
+
 
 
 
