--- a/index.html
+++ b/index.html
@@ -16,66 +16,14 @@
           <p>Enter a number and see if you can get "Ping Pong!"<br>
           Hint: any number divided by 3 or 5 or 15 will help.</p>
         </div>
-        <form id="formTwo">
-          <div class="form group">
-            <label for="userInput">Enter Your Number Here:</label>
-            <input id="userInput" type="text">
-          </div>
-          <div>
-            <button type="submit" class="btn">Play along with Ping-Pong!</button>
-            <ul id="result">
-            </ul>
-          </div>
-        </form>
-      </body>
-    </form>
-</html>
-
-        <!-- <div class="action">
-        <label class="enterNumber" for="enterAnumber">Enter a number:</label><br><br>
-        <input type="number" id="input"><br><br><br>
-
-        <button type="submit" class="btn">Find out!</button>
-        <div id="result">
-
-      </div>
-    </div>
-  </div> -->
-
-
-
-
-
-
-
-
-
-<!-- <!DOCTYPE html>
-<html>
-  <head>
-    <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
-    <link rel="stylesheet" href="css/styles.css" type="text/css">
-    <script src="js/jquery-3.2.1.js"></script>
-    <script src="js/scripts.js"></script>
-    <title>Ping Pong</title>
-  </head>
-  <body>
-    <div class="container">
-      <div class="jumbotron">
-
-
-      <form id="formOne">
-
-        <h1>Ping Pong!</h1>
-        <div class="form-group">
-          <label for="">Enter a number:</label>
-          <input type="text" id="myNumber"><br>
+          <label for="userInput">Enter Your Number Here:</label>
+          <input id="number" type="text">
+        <div>
+          <button type="submit" class="btn">Play along with Ping-Pong!</button>
         </div>
-        <button type="submit" name="button">Submit</button>
+      </div>
       </form>
       <div id="result">
-      </div>
-      </div>
     </div>
   </body>
-</html> -->
+</html>
